package com.hotelreservationsystem.domain.user;

public enum Role {
   CUSTOMER, STAFF
}
